// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Akta it should render generator components 1`] = `
<body>
  <div
    id="app"
  >
    <div>
      <div>
        <p>
          State 2
        </p>
        <button>
          Next
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Akta it should render generator components 2`] = `
<body>
  <div
    id="app"
  >
    <div>
      <p>
        State 3
      </p>
    </div>
  </div>
</body>
`;

exports[`Akta should render a nested jsx blob 1`] = `
<body>
  <div
    id="app"
  >
    <div
      class="c0"
    >
      <p
        class="c1 c2 c3"
        id="daniel"
        style="background: gray;"
      >
        This is a paragraph
      </p>
      <div>
        An observable element
      </div>
      <button>
        This is button
      </button>
      <div>
        An observable component
      </div>
      <div>
        <div
          class="c4"
        >
          Leaf 1
        </div>
        <div
          class="c5"
        >
          Leaf 2
        </div>
        <div
          class="c1"
        >
          Leaf 3
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Akta should render a nested jsx blob 2`] = `
".c1 {color: red;}
.c4 {color: black;}
.c5 {color: white;}
.c0 {font-family: arial;}
(min-width: 100px)
.c2 {color: blue;}
(max-width: 500px) and (min-width: 200px)
.c3 {color: green;}"
`;
